test/io/ferguson/channel-changing-type-error2.good
channel-changing-type-error2.chpl:3: In function 'main':
channel-changing-type-error2.chpl:6: error: cannot init writing channel from reading channel
