test/io/ferguson/channel-changing-type-error2.chpl
use IO;

proc main() {
  var f = opentmp();
  var a = f.reader();
  var b:channel(writing=true) = a;
}
